# EntityAlpha

./: .gitignore  .gitmodules  README.md  entity_fix.py  gradle.properties  gradlew  settings.gradle.kts  upgrade_entity.py
.github/workflows/: build.yml  ci.yml  nightly.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: avatar_renderer.html
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/kotlin/com/projectexe/: MainActivity.kt  ProjectEXEApp.kt
app/src/main/kotlin/com/projectexe/accessibility/: PetAccessibilityService.kt
app/src/main/kotlin/com/projectexe/ai/: LlamaBridge.kt  PetReactionEngine.kt  ProactiveDaemon.kt
app/src/main/kotlin/com/projectexe/data/: MemoryDatabase.kt  SoulDocument.kt
app/src/main/kotlin/com/projectexe/engine/: ErrorHandler.kt  LlamaEngine.kt  PersonalityPresets.kt  PipelineEngine.kt  SoulCompiler.kt
app/src/main/kotlin/com/projectexe/overlay/: PetOverlayManager.kt
app/src/main/kotlin/com/projectexe/rendering/: AvatarWebView.kt  LocalFileServer.kt
app/src/main/kotlin/com/projectexe/service/: BootReceiver.kt  PetForegroundService.kt
app/src/main/kotlin/com/projectexe/ui/: MainViewModel.kt
app/src/main/kotlin/com/projectexe/ui/screens/: ChatScreen.kt  DebugScreen.kt  SoulMemorySettingsScreens.kt
app/src/main/kotlin/com/projectexe/ui/theme/: Theme.kt
app/src/main/kotlin/com/projectexe/util/: PetFileManager.kt
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
